--- a/Typing-speed-test/main.css
+++ b/Typing-speed-test/main.css
@@ -53,14 +53,13 @@ section {
 .container-words {
     width: 100%;
     background: #000000;
-    /* user-select: none; */
     height: 120px;
     padding: 1rem;
     font-size: 1.2em;
     text-align: center;
     display: grid;
     place-content: center;
-    border: solid 1px rgb(30, 1, 56);
+    border: solid 1px #1e0138;
 }
 
 .input-area {
